mobile overflow fix

--- a/src/App.scss
+++ b/src/App.scss
@@ -14,6 +14,9 @@ html{
 body{
   overflow-x: hidden;
   overflow-y: scroll;
+  width: 100%;
+}
+body{
 }
 
 .App{
